# mutual-dissent

./: .coderabbit.yaml  .gitignore  .pre-commit-config.yaml  AI-STATEMENT.md  CHANGELOG.md  CONTRIBUTING.md  DEVELOPMENT_WORKFLOW.md  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
.jules/: palette.md
concepts/: TEMPLATE.md
docs/: Architecture.md  Roadmap.md
documentation/: changelog.mdx  concepts.mdx  docs.json  introduction.mdx  quickstart.mdx  responsible-use.mdx
documentation/architecture/: orchestrator.mdx  overview.mdx  providers.mdx  web-ui.mdx
documentation/cli/: ask.mdx  config.mdx  list-show.mdx  replay.mdx  serve.mdx
documentation/config/: environment-variables.mdx  providers.mdx  routing.mdx  toml-reference.mdx
documentation/research/: findings.mdx  methodology.mdx
documentation/schemas/: metadata.mdx  models.mdx  transcript.mdx
src/mutual_dissent/: __init__.py  cli.py  config.py  display.py  models.py  orchestrator.py  pricing.py  transcript.py  types.py
src/mutual_dissent/providers/: anthropic.py  openrouter.py  router.py
src/mutual_dissent/research/: __init__.py  finding_adapter.py  payload_source.py
src/mutual_dissent/web/: __init__.py  app.py  colors.py  layout.py  routes.py  websocket.py
src/mutual_dissent/web/components/: status_bar.py  transcript_view.py
src/mutual_dissent/web/components/charts/: convergence.py  cost.py  influence.py
src/mutual_dissent/web/pages/: config.py  dashboard.py  debate.py
src/mutual_dissent/web/static/: app.css
src/mutual_dissent/web/templates/: base.html  dashboard.html  debate.html  settings.html
src/mutual_dissent/web/templates/partials/: panel_config.html
tests/: test_agent_identity.py  test_anthropic_provider.py  test_cli_config.py  test_cli_version.py  test_config.py  test_list_show.py  test_markdown_file.py  test_models.py  test_pricing.py  test_providers.py  test_replay.py  test_research_payload_finding.py  test_research_scaffolding.py  test_router.py  test_transcript.py  test_types.py  test_web_app.py  test_web_cli.py  test_web_colors.py  test_web_routes.py  test_web_websocket.py
